tests/type-errors/04-mismatch-reverse.flt
// Type mismatch: reverse order
// --- Command: dotnet run --project FunLang -- --emit-type %input 2>&1
// --- ExitCode: 1
// --- Input:
true + 1
// --- Output:
TypeError: Cannot unify bool with int
